# rust-hello-world

./: Cargo.toml  Dockerfile  README.org  deploy
assets/: site.webmanifest
doc/: 20-rust-hello-world.conf  rust-hello-world.service
src/: data.rs  lib.rs  main.rs  main_carqueranne.rs  p1_meter.rs
templates/: greet_user_id_and_name.html  meter_readings_form.html
tests/: handlers.rs  integration_tests.sh  test_get_ip_address.rs
tests/test-data/: malformed_lease.txt  valid_lease.txt
