[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-rt = "2.8.0"
actix-web = "4.3.1"
derive_more = "0.99.17"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.18.1"

[lib]
name = "hello_world_lib"
path = "src/lib.rs"

[[bin]]
name = "hello_world"
path = "src/main.rs"
